feat: protobuf 完成dashBoard数据展示